@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Client {
        ~ clinets : List<person>
        + Client()
        + addClient()
        + getClientName()
        + getClients()
        + makeCart()
        + makeStore()
        + removeClientSurname()
        + toString()
        + toString1()
        + toString2()
        - getClient()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Product {
        - count : Integer
        - name : String
        - pid : Integer
        - price : Double
        - stock : Integer
        + Product()
        + Product()
        + getName()
        + getPid()
        + getPrice()
        + getProductCount()
        + getStock()
        + hashCode()
        + setName()
        + setPid()
        + setPrice()
        + setProductCount()
        + setStock()
    }
  }
  

  namespace com.company {
    class com.company.Store {
        ~ i : int
        ~ products : List<Product>
        - a10 : String
        - a10_20 : String
        - a20 : String
        + Store()
        + addItems()
        + displayStoreProducts()
        - displayItems()
        - getProducts()
    }
  }
  

  namespace com.company {
    class com.company.Store.Cart {
        ~ cartItems : List<Product>
        ~ count : int
        + Cart()
        + addProductToCartByPID()
        + printCartItems()
        + printForCart()
        + removeProductByPID()
        - addToCart()
        - checkCartItems()
        - getProductByProductID()
    }
  }
  

  namespace com.company {
    class com.company.person {
        ~ personName : String
        ~ personSurname : String
        + getPersonName()
        + getPersonSurname()
        + person()
        + person()
        + setPersonName()
        + setPersonSurname()
    }
  }
  

  namespace com.company {
    interface com.company.person1 {
        {abstract} + getPersonName()
        {abstract} + getPersonSurname()
        {abstract} + setPersonName()
        {abstract} + setPersonSurname()
    }
  }
  

  com.company.Client -up-|> com.company.person
  com.company.Client o-- com.company.Store.Cart : cart
  com.company.Client o-- com.company.Store : s
  com.company.Store +-down- com.company.Store.Cart
  com.company.person .up.|> com.company.person1


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
